fixed alignment

--- a/site/css/works.css
+++ b/site/css/works.css
@@ -91,6 +91,7 @@ a:hover{
   margin:auto;
   max-width:80%;
   max-height:100vh;
+  overflow-y: auto;
 }
 #zoom-img img{  
   /* flex:1; */
@@ -105,6 +106,9 @@ a:hover{
   min-width:300px;
   max-width:600px;
   margin: auto 10px;
+}
+#zoom-desc > div{
+  width:100%;
 }
 #zoom-desc p{
   color:black;
